[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Gunner 1/Player_idle1.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Gunner 1/Player_idle2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Gunner 1/Player_dash1.png" type="Texture" id=4]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow1.png" type="Texture" id=5]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow2.png" type="Texture" id=6]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow3.png" type="Texture" id=7]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow4.png" type="Texture" id=8]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow5.png" type="Texture" id=9]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow6.png" type="Texture" id=10]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow7.png" type="Texture" id=11]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow8.png" type="Texture" id=12]
[ext_resource path="res://assets/Particles/Explosion/Explosion_Yellow9.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Gunner 1/Player_dash2.png" type="Texture" id=14]
[ext_resource path="res://assets/Sound/Am_Friend.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/Sound/Ouch.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/Sound/Boom.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/Sound/Am_Life.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ null, ExtResource( 4 ), null, ExtResource( 4 ), null, ExtResource( 4 ) ],
"loop": true,
"name": "hitted",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "death",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ) ],
"loop": true,
"name": "dash",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 53.1507

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
speed = 300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
shape = SubResource( 2 )

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="SounfHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="SoundKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="SoundLifeUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="game_over" from="." to="." method="_on_Player_game_over"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
